[gd_scene load_steps=8 format=3 uid="uid://da5h3g0ck503s"]

[ext_resource type="Script" path="res://scripts/interface/LVLUPScene.gd" id="1_1vp7c"]
[ext_resource type="PackedScene" uid="uid://be5oc40shsjh0" path="res://prefabs/interface/lvlup/ImproveCard.tscn" id="1_u7ls2"]
[ext_resource type="FontFile" uid="uid://cgtlxpefvcma1" path="res://fonts/Silver.ttf" id="3_en1nd"]

[sub_resource type="Animation" id="Animation_f3iei"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ebsbd"]
resource_name = "idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.08, 1.08), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_54fi5"]
_data = {
"RESET": SubResource("Animation_f3iei"),
"idle": SubResource("Animation_ebsbd")
}

[sub_resource type="GDScript" id="GDScript_fpulw"]
script/source = "extends AnimationPlayer


func _ready():
	play(\"idle\")
"

[node name="Lvlup" type="Node2D"]
process_mode = 3
z_index = 100
script = ExtResource("1_1vp7c")

[node name="ImproveCard" parent="." instance=ExtResource("1_u7ls2")]
position = Vector2(460, 707)

[node name="ImproveCard2" parent="." instance=ExtResource("1_u7ls2")]
position = Vector2(960, 707)

[node name="ImproveCard3" parent="." instance=ExtResource("1_u7ls2")]
position = Vector2(1460, 707)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_left = -50.0
offset_top = -18.0
offset_right = 2021.0
offset_bottom = 1127.0
mouse_filter = 2
color = Color(0, 0, 0, 0.313726)

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 121.0
offset_top = -96.0
offset_right = 1820.0
offset_bottom = 426.0
grow_horizontal = 2
pivot_offset = Vector2(876, 253)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("3_en1nd")
theme_override_font_sizes/font_size = 160
text = "Choose your upgrade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
libraries = {
"": SubResource("AnimationLibrary_54fi5")
}
script = SubResource("GDScript_fpulw")

[connection signal="choosed" from="ImproveCard" to="." method="choosed"]
[connection signal="choosed" from="ImproveCard2" to="." method="choosed"]
[connection signal="choosed" from="ImproveCard3" to="." method="choosed"]
